#392: Use List.of instead of Arrays.asList after merging master in branch.